tests/ast_interpreter/arithmetic.expected
15
5
50
2
1
16
5
21
5.25
1.5
15.5
4.5
25
2.5
3
15.5
5.5
21
5.25
1.5
-5
-3.5
<string>:35:14: error: division by zero
    print(10 / 0);
             ^
